--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,2 @@
 .vscode/settings.json
-target/workflee-0.0.1.jar
-target/classes/com/App.class
-target/classes/com/Element/BehaviourElement.class
-target/classes/com/Element/Element.class
-target/classes/com/Element/FlowElement/Activity.class
-target/classes/com/Element/FlowElement/Event.class
-target/classes/com/Workflow/Definition.class
-target/classes/com/Workflow/State.class
-target/classes/com/Workflow/Task.class
-target/classes/com/Workflow/Workflow.class
-target/maven-archiver/pom.properties
-target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
-target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
-target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
-target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
-target/surefire-reports/com.WorkflowTests.txt
-target/surefire-reports/TEST-com.WorkflowTests.xml
-target/test-classes/com/WorkflowTests.class
+target/**/*
