- artifact name updated

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com</groupId>
-  <artifactId>workflee</artifactId>
+  <artifactId>Workflee</artifactId>
   <version>0.0.1</version>
 
   <name>workflee</name>
