--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
       <version>${junit.platform.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jgrapht</groupId>
+      <artifactId>jgrapht-core</artifactId>
+      <version>1.5.1</version>
+    </dependency>
   </dependencies>
 
   <build>
