--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <name>workflee</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://github.com/NicoMadd/workflee</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
